fix: hero slider layout shift and UI refinements

--- a/src/input.css
+++ b/src/input.css
@@ -43,8 +43,29 @@
   background-image: linear-gradient(-90deg, #8ec7ef, #1e419b);
 }
 
+#phone-number {
+  position: relative;
+  display: inline-block;
+}
+
+#phone-number::after {
+  content: "";
+  height: 2px;
+  width: 0;
+  position: absolute;
+  left: 0;
+  bottom: -2px;
+
+  border: 1px solid white;
+  transition: width 0.5s ease;
+}
+
+#phone-number.active::after {
+  width: 100px;
+}
+
 .container {
-  max-width: 1180px;
+  max-width: 1140px;
   margin: 0 auto;
 }
 
@@ -59,6 +80,7 @@
   margin: auto;
   transition: all 0.4s ease-in-out !important;
 }
+
 .heroSwiper .swiper-slide:not(.swiper-slide-active):hover::after {
   content: "";
   position: absolute;
@@ -73,7 +95,7 @@
 #hero-subtitle {
   #hero-title {
     display: inline-block;
-    
+    /* Bu mütləqdir! */
     transition: transform 0.5s ease-in-out, opacity 0.5s;
   }
 }
@@ -119,11 +141,13 @@
 .fly-once {
   animation: flyAcross 3.5s linear;
 }
+
 @media (min-width: 768px) {
   .heroSwiper .swiper-slide {
     width: 260px !important;
   }
-  .heroSwiper{
+
+  .heroSwiper {
     overflow: hidden;
   }
 }
